--- a/Web Programming/Non-Gradient Master/style.css
+++ b/Web Programming/Non-Gradient Master/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #141414;
 }
 
-.offer {
+.feature h1 {
     color: white;
     font-family: 'Airbnb Cereal App Bold', sans-serif;
     font-size: 36px;
@@ -11,25 +11,24 @@ body {
     margin-left: 174px;
 }
 
-.content {
+.feature p {
     font-family: 'Airbnb Cereal App Medium';
     font-size: 14px;
-    margin-left: 116px;
     width: 650px;
-    display: inline-block;
+    margin-left: 172px;
     letter-spacing: 0.4px;
-    color: white;
+    color: #dbdbdb;
 
 }
 
-.none {
+.project p {
     margin-left: 174px;
     font-family: 'Airbnb Cereal App Medium', sans-serif;
     color: #d4d4d4;
     font-size: 14px;
 }
 
-.recent {
+.project h3 {
     font-family: 'Airbnb Cereal App Medium', sans-serif;
     color: white;
     margin-left: 174px;
@@ -37,21 +36,50 @@ body {
     font-size: 16px;
 }
 
-.logo {
+/* - HEADER - */
+
+.header h1 {
+    margin-left: 16px;
     font-family: 'Playfair Display Black', serif;
     font-weight: normal;
     color: white;
     margin-top: 70px;
     display: inline-block;
-    margin-left: 174px;
     font-size: 36px;
     letter-spacing: 1.1px;
 }
 
+.header {
+    display: inline-block;
+    margin-left: 174px;
+}
+
+.header img {
+    border-radius: 5px;
+    margin-top: 64px;
+    display: inline-block;
+    float: left;
+    width: 64px;
+    height: 64px;
+    transition: .3s ease-out;
+    cursor: pointer;
+}
+
+.header img:hover {
+    -webkit-box-shadow: 1px 2px 16px -1px rgba(31,31,31,0.07);
+-moz-box-shadow: 1px 2px 16px -1px rgba(31,31,31,0.07);
+box-shadow: 1px 2px 16px -1px rgba(31,31,31,0.07);
+    transition: .3s ease-in;
+    cursor: pointer;
+}
+
+/* - End of Header - */
+/* - Menu - */
+
 .menu {
+    margin-top: 88px;
     float: right;
     margin-right: 174px;
-    margin-top: 94px;
     display: inline;
     list-style-type: none;
 }
@@ -73,4 +101,28 @@ body {
     color: white;
     transition: 0.2s ease-in;
     cursor: pointer;
+}
+
+/* - End of Menu - */
+
+::selection {
+    background: #ae91ff;
+    color: white;
+}
+
+@media screen and (min-width: 480px) {
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+    .header{
+        text-align: center;
+        display: inline-block;
+    }
+    
+    .menu {
+        margin-left: 0;
+        margin-right: 120px;
+    }
 }
