--- a/Web Programming/Non-Gradient Master/style.css
+++ b/Web Programming/Non-Gradient Master/style.css
@@ -34,6 +34,7 @@ body {
     margin-left: 174px;
     margin-top: 72px;
     font-size: 16px;
+    letter-spacing: 1px;
 }
 
 /* - HEADER - */
@@ -68,7 +69,7 @@ body {
 .header img:hover {
     -webkit-box-shadow: 1px 2px 16px -1px rgba(31,31,31,0.07);
 -moz-box-shadow: 1px 2px 16px -1px rgba(31,31,31,0.07);
-box-shadow: 1px 2px 16px -1px rgba(31,31,31,0.07);
+box-shadow: 1px 2px 16px -1px rgba(139, 89, 89, 0.07);
     transition: .3s ease-in;
     cursor: pointer;
 }
@@ -101,6 +102,17 @@ box-shadow: 1px 2px 16px -1px rgba(31,31,31,0.07);
     color: white;
     transition: 0.2s ease-in;
     cursor: pointer;
+}
+
+.navigation-chevron-down img {
+    opacity: 25%;
+    transition: .4s;
+    cursor: pointer;
+}
+
+.navigation-chevron-down img:hover {
+    opacity: 100%;
+    transition: .4s;
 }
 
 /* - End of Menu - */
