--- a/Web Programming/Non-Gradient Arbhy/style/style.css
+++ b/Web Programming/Non-Gradient Arbhy/style/style.css
@@ -1,148 +1,183 @@
 /* memuat font yang akan dipakai */
 @font-face {
-    font-family: 'Airbnb Cereal Bold';
-    src: url('../font/AirbnbCerealBold.woff') format('woff')
+  font-family: "Airbnb Cereal Bold";
+  src: url("../font/AirbnbCerealBold.woff") format("woff");
 }
 
 @font-face {
-    font-family: 'Airbnb Cereal App Book';
-    src: url('../font/AirbnbCerealBook.woff') format('woff')
+  font-family: "Airbnb Cereal App Book";
+  src: url("../font/AirbnbCerealBook.woff") format("woff");
 }
 
 @font-face {
-    font-family: 'Playfair Display Bold';
-    src: url('../font/PlayfairDisplay-Bold.woff') format('woff')
+  font-family: "Playfair Display Bold";
+  src: url("../font/PlayfairDisplay-Bold.woff") format("woff");
 }
 
 /* style default */
-html, body {
-    padding: 0;
-    margin: 0
+html,
+body {
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color: black;
-    font-family: 'Airbnb Cereal App Book';
-    color: white;
-    overflow-x: hidden;
+  background-color: #292929;
+  font-family: "Airbnb Cereal App Book";
+  color: white;
+  overflow-x: hidden;
 }
 
 h1 {
-    font-family: 'Airbnb Cereal Bold', sans-serif
+  font-family: "Airbnb Cereal Bold", sans-serif;
 }
 
 section {
-    margin-top: 40px
+  margin-bottom: 100px;
 }
 
 .container {
-    padding: 20px 80px 20px 80px
+  padding: 40px 80px;
+}
+
+.d-flex {
+  display: flex;
+  justify-content: space-between;
 }
 
 .blvck-deer {
-    font-family: 'Playfair Display Bold';
-}
-
-.card {
-    height: 150px;
-    width: 300px;
-    border: 1px solid white;
-    display: inline-block;
+  font-family: "Playfair Display Bold";
 }
 
 /* memberikan style pada navigasi */
 nav {
-    width: 100%;
-    padding: 30px 80px 30px 80px
-}
-
-.brand-container, .nav-menu {
-    display: inline-block
+  width: 100%;
 }
 
 .brand-container {
-    position: absolute
-}
-
-.brand-container a {
-    display: block
+  width: 20%;
+  height: 100px;
 }
 
 .nav-brand {
-    font-size: 36px
+  font-size: 36px;
 }
 
 .brand-chant {
-    font-size: 18px;
-    margin-top: -2px
+  font-size: 18px;
+  margin-top: -2px;
+}
+
+.nav-brand,
+.brand-chant {
+  display: block;
 }
 
 .nav-menu {
-    list-style: none;
-    padding: 0;
-    margin-top: 20px;
-    margin-left: 55%
+  list-style: none;
+  padding: 0;
 }
 
 .menu-list {
-    display: inline-block;
-    margin-right: 20px;
-    padding: 0
+  display: inline-block;
+  margin-right: 20px;
+  padding: 0;
 }
 
 .nav-link {
-    position: relative;
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
-
-.nav-link:hover::before {
-    position: absolute;
-    content: " ";
-    height: 2px;
-    width: 50%;
-    background: white;
-    bottom: 0;
-    left: 25%;
-    right: 25
-}
-
 
 /* memberi style pada sesi 'project' */
-.project {
-    width: 100%;
+.project-card {
+  height: 250px;
+  width: 30%;
+  border-radius: 4px;
+  display: inline-block;
+  background: red;
+  background-size: cover;
+  position: relative;
 }
 
-.project .card:nth-child(2) {
-    clear: both;
-    margin: auto;
+.project-card-container {
+  width: 88%;
+  position: absolute;
+  bottom: 10px;
+  padding: 25px;
 }
 
-.project .card:nth-child(3) {
-    float: right;
+.project-card-info h3,
+p {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.project-card h4 {
+  font-family: "Airbnb Cereal Bold";
+}
+
+.circle-icon {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background: wheat;
+  display: inline-block;
+}
+
+.circle-icon:nth-child(1) {
+  margin-right: 10px;
 }
 
 /* memberikan style pada sesi 'offering' */
 .offering {
-    width: 100%;
-    height: 200px;
-    padding: 0;
-    margin: 0
+  width: 100%;
+  height: 100%;
+}
+
+.offering .d-flex:nth-child(2) {
+  margin-top: 100px;
 }
 
 .offering h1 {
-    height: 100%;
-    width: 30%;
-    float: left;
-    margin: 0;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .content {
-    width: 60%;
-    float: right;
-    margin: 0
+  width: 60%;
 }
 
 .content p {
-    margin-top: 0;
+  margin-top: 0;
+}
+
+.profile-card {
+  height: 400px;
+  width: 25%;
+  border-radius: 4px;
+  background: white;
+}
+
+.profile-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.profile-circle {
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  left: 50%;
+  top: -25%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  background: yellow;
+  z-index: 1;
+}
+
+.account-box {
 }
